# harp-codec

./: .gitignore  LICENSE  README.md  entry.py  pyproject.toml
docs/: app.js  index.html  style.css
docs/audio/: manifest.json
harp/: infer_dac.py  infer_harp.py  train_dac.py  train_harp.py
harp/configs/: train_dac.yaml  train_harp.yaml
harp/data/: base.py  jamendo.py  libritts.py  musdb18.py
harp/models/: dac.py  harp.py
harp/models/components/: audio_metrics.py  layers.py  loss.py  quantize.py
harp/pipelines/: infer.py  train.py
scripts/: build_demo.py  export_weights.py
